--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
     },
     "FROM_CHANNEL": {
       "description": "enter Channel username Eg:- @abcdefghijk",
-      "value": "@lokidatabase"
+      "value": ""
     },
     "OWNER_ID": {
       "description": "Enter Your Telegram id",
